--- a/css/about.css
+++ b/css/about.css
@@ -1,166 +1,170 @@
 .about-title .titleMain {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .about-title.dark .titleMain {
-  color: #fff;
+    color: #fff;
 }
 
 #about {
-  margin-top: -60px;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  position: relative;
+    margin-top: -60px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
 }
 
 #about .arrow i,
 #skills .arrow i {
-  left: 600px;
-  bottom: 90px;
+    left: 600px;
+    bottom: 90px;
 }
 
 .about-info {
-  margin-top: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 80px;
+    margin-top: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
 }
 
 .about-info img {
-  width: 400px;
-  /* background: #333; */
-  height: 400px;
-  border-radius: 30px;
-  margin-top: -25px;
-  animation: imageAnimation 5s infinite;
-  transition: all 0.3s;
-  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
+    width: 400px;
+    /* background: #333; */
+    height: 400px;
+    border-radius: 30px;
+    margin-top: -25px;
+    animation: imageAnimation 5s infinite;
+    transition: all 0.3s;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
 }
 
 .about-text {
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 50px;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 50px;
 }
 
 .about-text p {
-  font-size: 18px;
-  color: #333;
-  font-weight: 400;
+    font-size: 1.125rem;
+    color: #333;
+    font-weight: 400;
 }
 
 .about-softskills {
-  display: flex;
-  gap: 20px;
-  font-size: 14px;
+    display: flex;
+    gap: 20px;
+    font-size: 0.875rem;
 }
 .about-softskills .experience {
-  outline: black solid 1px;
-  padding: 10px 5px;
-  border-radius: 40px;
+    outline: black solid 1px;
+    padding: 10px 5px;
+    border-radius: 40px;
 }
 
 .experience {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
 .experience:first-child h3 {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  color: #222;
-  margin-right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    color: #222;
+    margin-right: 20px;
 }
 .experience:last-child h3 {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  color: #222;
-  margin-right: 40px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    color: #222;
+    margin-right: 40px;
 }
 
 .experience i {
-  font-size: 30px;
-  /* position: absolute; */
-  left: -33px;
-  top: -2px;
-  color: #333;
+    font-size: 30px;
+    /* position: absolute; */
+    left: -33px;
+    top: -2px;
+    color: #333;
 }
 
 .experience.two i {
-  font-size: 25px;
-  top: 0;
-  left: -45px;
+    font-size: 25px;
+    top: 0;
+    left: -45px;
 }
 
 .about-info.dark p {
-  color: #fff;
+    color: #fff;
 }
 
 .about-info img {
-  background-color: #222;
+    background-color: #222;
 }
 
 .about-info.dark img {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 .about-softskills.dark i {
-  color: #f4f4f4;
+    color: #f4f4f4;
 }
 
 .about-softskills.dark h3 {
-  color: #fff;
+    color: #fff;
 }
 
 .about-softskills.dark .experience {
-  outline-color: #fff;
+    outline-color: #fff;
+}
+
+.about-p > span {
+    font-weight: bold;
 }
 
 @media (max-width: 950px) {
-  #about .arrow i {
-    display: none;
-  }
+    #about .arrow i {
+        display: none;
+    }
 
-  #about {
-    margin: 3.5rem 0px 0px 0px;
-    padding: 0px 20px;
-    height: max-content;
-    text-align: start;
-    align-items: center;
-  }
+    #about {
+        margin: 3.5rem 0px 0px 0px;
+        padding: 0px 20px;
+        height: max-content;
+        text-align: start;
+        align-items: center;
+    }
 
-  .about-softskills {
-    flex-direction: column;
-    display: none;
-  }
+    .about-softskills {
+        flex-direction: column;
+        display: none;
+    }
 
-  .about-text p {
-    font-size: 15px;
-    max-width: 600px;
-  }
+    .about-text p {
+        font-size: 15px;
+        max-width: 600px;
+    }
 
-  .about-info {
-    flex-direction: column-reverse;
-    gap: 40px;
-    margin-top: 15px;
-  }
+    .about-info {
+        flex-direction: column-reverse;
+        gap: 40px;
+        margin-top: 15px;
+    }
 
-  .about-info img {
-    width: 250px;
-    height: 250px;
-    margin-top: 0px;
-  }
+    .about-info img {
+        width: 250px;
+        height: 250px;
+        margin-top: 0px;
+    }
 
-  .experience h3 {
-    font-size: 10px;
-  }
+    .experience h3 {
+        font-size: 10px;
+    }
 }
